--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -3,44 +3,17 @@
     <head>
       <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 <title>About Us</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <!-- CSS Files -->
 <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.3/components/abouts/about-1/assets/css/about-1.css" />
     </head>
     <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="index.html">TechDeal</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" href="aboutUs.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contactUs.html">Contact Us</a></li>
-                </ul>
-                <form class="d-flex">
-                    <div class="Login-button">
-                        <a href="userLogin.html" style="margin-right: 15px; color: black">login</a>
-                    </div>
-
-
-                    <a href="shoppingCart.html">
-                        <div class="Shopping-cart">
-                            <img src="grocery-store.png" alt="Shopping Cart" style="width:25px;">
-                        </div>
-
-                    </a>
-                       
-                    
-                </form>
-            </div>
-        </div>
-    </nav>
 <section class="py-3 py-md-5 py-xl-8">
     <div class="container">
       <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
         <div class="col-12 col-lg-6 col-xl-5">
-          <img class="img-fluid rounded" loading="lazy" src="aboutUsPhoto.jpg" alt="">
+          <img class="img-fluid rounded" loading="lazy" src="pictures/aboutUsPhoto.jpg" alt="">
         </div>
         <div class="col-12 col-lg-6 col-xl-7">
           <div class="row justify-content-xl-center">
@@ -82,5 +55,9 @@
       </div>
     </div>
   </section>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="js/scripts.js"></script>
     </body>
 </html>
