--- a/pages/users-profile.html
+++ b/pages/users-profile.html
@@ -7,13 +7,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets2/img/favicon.png" rel="icon">
-  <link href="assets2/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets2/img/favicon.png" rel="icon">
+  <link href="../assets2/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
@@ -38,40 +38,13 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
 </head>
 
 <body>
 
   <!-- ======= Header ======= -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="index.html">TechDeal</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Products</a></li>
-                <li class="nav-item"><a class="nav-link" href="aboutUs.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="contactUs.html">Contact Us</a></li>
-            </ul>
-            <form class="d-flex">
-                <div class="Login-button">
-                    <a href="userLogin.html" style="margin-right: 15px; color: black">login</a>
-                </div>
-
-
-                <a href="shoppingCart.html">
-                    <div class="Shopping-cart">
-                        <img src="grocery-store.png" alt="Shopping Cart" style="width:25px;">
-                    </div>
-
-                </a>
-                   
-                
-            </form>
-        </div>
-    </div>
-</nav>
+  
   <!-- ======= Sidebar ======= -->
   
 
@@ -372,17 +345,21 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets2/vendor/apexcharts/apexcharts.min.js"></script>
-  <script src="assets2/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets2/vendor/chart.js/chart.umd.js"></script>
-  <script src="assets2/vendor/echarts/echarts.min.js"></script>
-  <script src="assets2/vendor/quill/quill.min.js"></script>
-  <script src="assets2/vendor/simple-datatables/simple-datatables.js"></script>
-  <script src="assets2/vendor/tinymce/tinymce.min.js"></script>
-  <script src="assets2/vendor/php-email-form/validate.js"></script>
+  <script src="<../assets2/vendor/apexcharts/apexcharts.min.js"></script>
+  <script src="../assets2/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets2/vendor/chart.js/chart.umd.js"></script>
+  <script src="../assets2/vendor/echarts/echarts.min.js"></script>
+  <script src="../assets2/vendor/quill/quill.min.js"></script>
+  <script src="../assets2/vendor/simple-datatables/simple-datatables.js"></script>
+  <script src="../assets2/vendor/tinymce/tinymce.min.js"></script>
+  <script src="../assets2/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets2/js2/main2.js"></script>
+  <script src="../assets2/js2/main2.js"></script>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="js/scripts.js"></script>
 
 </body>
 
