--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="assets/css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.5/css/dataTables.dataTables.css" />
+
 </head>
 <body>
 
@@ -57,6 +59,7 @@
     </main>
 
         <!-- Footer-->
+
         <!-- <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; TechDeal 2024</p></div>
         </footer> -->
@@ -71,7 +74,11 @@
     <!-- <script src="spapp/js/jquery.3.7.1.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.20.0/jquery.validate.min.js"></script> 
     <!--<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>-->
+    <script src="https://cdn.datatables.net/2.0.5/js/dataTables.js"></script>
+
     <script src="spapp/js/jquery.spapp.js"></script>
+    <script src="spapp/js/jquery.spapp.min.js"></script>
+
     <script src="spapp/js/custom.js"></script>
     <script src="assets/js/scripts.js"></script>
     <script src="services/ajax.js"></script>
