Final commit for 5th Milestone

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -60,4 +60,9 @@
   <!-- Core theme JS-->
   <script src="js/scripts.js"></script>
     </body>
+    <script>
+      // if (!(Utils.get_from_localstorage("user"))) {
+      //     window.location = "http://localhost/Web-Project/#userLogin";
+      //   } 
+ </script>
 </html>
