--- a/pages/product.html
+++ b/pages/product.html
@@ -221,4 +221,9 @@ window.onclick = function(event) {
         </script>
 
     </body>
+    <script>
+        // if (!(Utils.get_from_localstorage("user"))) {
+        //     window.location = "http://localhost/Web-Project/#userLogin";
+        //   } 
+   </script>
 </html>
