--- a/pages/shoppingCart.html
+++ b/pages/shoppingCart.html
@@ -219,4 +219,9 @@
 <script src="assets/js/scripts.js"></script>
 <script src="../popup.js"></script>
   </body>
+  <script>
+    // if (!(Utils.get_from_localstorage("user"))) {
+    //     window.location = "http://localhost/Web-Project/#userLogin";
+    //   } 
+</script>
 </html>
