--- a/pages/users-profile.html
+++ b/pages/users-profile.html
@@ -362,5 +362,9 @@
   <script src="assets/js/scripts.js"></script>
 
 </body>
-
+<script>
+  // if (!(Utils.get_from_localstorage("user"))) {
+  //     window.location = "http://localhost/Web-Project/#userLogin";
+  //   } 
+</script>
 </html>
