--- a/pages/home.html
+++ b/pages/home.html
@@ -11,7 +11,7 @@
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../css/styles.css" rel="stylesheet" />
+        <link href="assets/css/styles.css" rel="stylesheet" />
     </head>
     <body>
         
@@ -226,4 +226,10 @@
 
         <!-- <script src="posts.js"></script> -->
     </body>
+    <script>
+        // if (!(Utils.get_from_localstorage("user"))) {
+        //     window.location = "http://localhost/Web-Project/#userLogin";
+        //   } 
+   </script>
+   
 </html>
